--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/bst003/todo-list#readme",
   "devDependencies": {
     "css-loader": "^6.7.1",
+    "date-fns": "^2.28.0",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
