--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^6.7.1",
     "date-fns": "^2.28.0",
     "micromodal": "^0.4.10",
+    "rmodal": "^1.1.0",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
